--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <header>
-
+        <header>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur blanditiis alias, ex dolore modi quisquam nostrum ullam? Culpa, exercitationem? Rem natus aut atque dolorum unde sapiente magnam dolor repellendus ab.</p>
     </header>
 
     <main>
