--- a/index.html
+++ b/index.html
@@ -5,13 +5,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
-    <script src="script.js"></script> 
+    <script src="script.js"></script>
 </head>
 
 <body>
 
-        <header>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur blanditiis alias, ex dolore modi quisquam nostrum ullam? Culpa, exercitationem? Rem natus aut atque dolorum unde sapiente magnam dolor repellendus ab.</p>
+    <header>
+        <nav class="navbar">
+            <a href="#">
+                <img src="assets/images/logoClairSombre-removebg-preview.png" tag="logo">
+            </a>
+            <div>
+                <ul class="nav_menu">
+                    <li class="nav_text">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="nav_text">
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="nav_text">
+                        <a href="#contact">Contact</a>
+                    </li>
+                    <li class="nav_text darkmode">
+                        <input type="checkbox" id="darkmode-toggle">
+                        <label for="darkmode-toggle"></label>
+                    </li>
+                    <li></li>
+                </ul>
+                <button class="hamburger">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </button>
+                <button>
+                    <img src="assets/images/panier.png">
+                </button>
+            </div>
+        </nav>
+
+        <section>
+            <div>
+                <h1>Veggie Point.</h1>
+                <p>Our Mission (possible!)
+                    There’s nothing cooler than saving the planet. Our mission is to inspire people to make better
+                    choices by showing them the future can be both sustainable and delicious.</p>
+                <a href="#menu">
+                    <img class="arrow-down" src="assets/images/icon-arrow-down.svg" tag="flèche">
+                </a>
+            </div>
+        </section>
     </header>
 
     <main>
@@ -22,7 +64,7 @@
         <div class="footer_container">
 
         </div>
-      </footer>
+    </footer>
 
 </body>
 
