--- a/index.html
+++ b/index.html
@@ -5,24 +5,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
-    <script src="script.js"></script> 
+    <link rel="stylesheet" href="assets/scss/style.css">
+    <script src="script.js"></script>
+
 </head>
 
 <body>
 
-        <header>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur blanditiis alias, ex dolore modi quisquam nostrum ullam? Culpa, exercitationem? Rem natus aut atque dolorum unde sapiente magnam dolor repellendus ab.</p>
+    <header>
+
     </header>
 
     <main>
 
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="footer_container">
-
+            <div class="footer_container_about">
+                <p><strong>Veggie Point</strong></p>
+                <p>20 Rue de Flandre<br>Bruxelles 1000<br>Belgique</p>
+            </div>
+            <div class="footer_container_liens">
+                <ul class="footer_container_liens_list">
+                    <li>Nos offres</li>
+                    <li>Entreprise</li>
+                    <li>FAQ </li>
+                    <li>politique de confidentialité </li>
+                    <li>Contactez-vous</li>
+                </ul>
+            </div>
+            <div class="footer_container_github">
+                <a href="https://github.com/Dams4953/dark_kitchen/tree/main"><img src="assets/images/githubLogo.png"
+                        alt="giithub"></a>
+            </div>
+            <div class="footer_container_icones">
+                <ul class="footer_container_icones_list">
+                    <li>
+                        <a class="footer_container_icones_list_facebook" href=""><img
+                                src="assets/images/icon-facebook.svg" alt="facebook"></a>
+                    </li>
+                    <li>
+                        <a class="footer_container_icones_list_twitter" href=""><img
+                                src="assets/images/icon-twitter.svg" alt="twitter"></a>
+                    </li>
+                    <li>
+                        <a class="footer_container_icones_list_instagram" href=""><img
+                                src="assets/images/icon-instagram.svg" alt="instagram"></a>
+                    </li>
+                    <li>
+                        <a class="footer_container_icones_list_pinterest" href=""><img
+                                src="assets/images/icon-pinterest.svg" alt="pinterest"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </footer>
+    </footer>
 
 </body>
 
