--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
-    <script src="script.js"></script> 
 </head>
 
 <body>
@@ -15,7 +14,8 @@
     </header>
 
     <main>
-
+        <div id="card-container"> 
+        </div>
     </main>
 
     <footer>
@@ -23,7 +23,7 @@
 
         </div>
       </footer>
-
+      <script src="script.js"></script> 
 </body>
 
 </html>
