--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
-<<<<<<< HEAD
-    <script src="script.js"></script>
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-    <script src="script.js"></script>
-=======
     <link rel="stylesheet" href="assets/scss/style.css">
-    <script src="script.js"></script>
-
->>>>>>> damien
->>>>>>> 898fe5cf4c61195cd8275101133e846359189335
->>>>>>> 7f6bf7673df53553da4af02f512f794c3ebce670
 </head>
 
 <body>
@@ -70,57 +57,58 @@
     </header>
 
     <main>
-        <div id="card-container"> 
+        <div id="card-container">
         </div>
     </main>
 
     <footer class="footer">
         <div class="footer_container">
+            <h2>Où nous trouver</h2>
             <div class="footer_container_about">
-                <p><strong>Veggie Point</strong></p>
-                <p>20 Rue de Flandre<br>Bruxelles 1000<br>Belgique</p>
-            </div>
-            <div class="footer_container_liens">
-                <ul class="footer_container_liens_list">
-                    <li>Nos offres</li>
-                    <li>Entreprise</li>
-                    <li>FAQ </li>
-                    <li>politique de confidentialité </li>
-                    <li>Contactez-vous</li>
-                </ul>
+                <p><strong>Veggie Point</strong><br>20 Rue de Flandre<br>Bruxelles 1000<br>Belgique</p>
+                <div class="footer_container_logo">
+                    <img src="assets/images/logoClairSansFond.png" alt="logo"></a>
+                </div>
+                <div class="footer_container_liens">
+                    <ul class="footer_container_liens_list">
+                        <li><a href="">Nos offres</a></li>
+                        <li><a href="">Entreprise</a></li>
+                        <li><a href="">FAQ</a></li>
+                        <li><a href="">politique de confidentialité</a></li>
+                        <li><a href="">Contactez-nous</a></li>
+                    </ul>
+                </div>
+
             </div>
             <div class="footer_container_github">
                 <a href="https://github.com/Dams4953/dark_kitchen/tree/main"><img src="assets/images/githubLogo.png"
-                        alt="giithub"></a>
-            </div>
+                        alt="github"></a>
+
+
             <div class="footer_container_icones">
                 <ul class="footer_container_icones_list">
                     <li>
-                        <a class="footer_container_icones_list_facebook" href=""><img
-                                src="assets/images/icon-facebook.svg" alt="facebook"></a>
+                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-facebook.svg"
+                                alt="facebook"></a>
                     </li>
                     <li>
-                        <a class="footer_container_icones_list_twitter" href=""><img
-                                src="assets/images/icon-twitter.svg" alt="twitter"></a>
+                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-twitter.svg"
+                                alt="twitter"></a>
                     </li>
                     <li>
-                        <a class="footer_container_icones_list_instagram" href=""><img
-                                src="assets/images/icon-instagram.svg" alt="instagram"></a>
+                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-instagram.svg"
+                                alt="instagram"></a>
                     </li>
                     <li>
-                        <a class="footer_container_icones_list_pinterest" href=""><img
-                                src="assets/images/icon-pinterest.svg" alt="pinterest"></a>
+                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-pinterest.svg"
+                                alt="pinterest"></a>
                     </li>
                 </ul>
             </div>
         </div>
-<<<<<<< HEAD
-      </footer>
-      <script src="script.js"></script> 
-=======
     </footer>
 
->>>>>>> 898fe5cf4c61195cd8275101133e846359189335
+    <script src="script.js"></script>
 </body>
 
 </html>
