--- a/index.html
+++ b/index.html
@@ -5,22 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-    <script src="script.js"></script>
-=======
     <link rel="stylesheet" href="assets/scss/style.css">
-    <script src="script.js"></script>
-
->>>>>>> damien
->>>>>>> 898fe5cf4c61195cd8275101133e846359189335
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
-<<<<<<< HEAD
+
         <nav class="navbar">
             <a href="#">
                 <img src="assets/images/logoClairSombre-removebg-preview.png" tag="logo">
@@ -64,14 +56,13 @@
                 </a>
             </div>
         </section>
-=======
-
->>>>>>> damien
     </header>
 
     <main>
+        <h2 class="h2main">Notre menu :</h2>
         <div id="card-container"> 
         </div>
+        <script src="assets/js/script.js"></script> 
     </main>
 
     <footer class="footer">
@@ -114,13 +105,12 @@
                 </ul>
             </div>
         </div>
-<<<<<<< HEAD
-      </footer>
-      <script src="script.js"></script> 
-=======
-    </footer>
 
->>>>>>> 898fe5cf4c61195cd8275101133e846359189335
+      
+
+    </footer>
+  
+   
 </body>
 
 </html>
