--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-    <script src="script.js"></script>
-=======
     <link rel="stylesheet" href="assets/scss/style.css">
-    <script src="script.js"></script>
-
->>>>>>> damien
->>>>>>> 898fe5cf4c61195cd8275101133e846359189335
 </head>
 
 <body>
 
     <header>
-<<<<<<< HEAD
-        <nav class="navbar">
-            <a href="#">
-                <img src="assets/images/logoClairSombre-removebg-preview.png" tag="logo">
-            </a>
-            <div>
+        <div class="section-home">
+            <nav class="navbar">
+                <a href="#">
+                    <img class="logo" src="assets/images/logo.png" tag="logo">
+                </a>
+
                 <ul class="nav_menu">
                     <li class="nav_text">
                         <a href="#">Home</a>
@@ -40,38 +31,32 @@
                         <input type="checkbox" id="darkmode-toggle">
                         <label for="darkmode-toggle"></label>
                     </li>
-                    <li></li>
                 </ul>
-                <button class="hamburger">
-                    <span class="line"></span>
-                    <span class="line"></span>
-                    <span class="line"></span>
-                </button>
-                <button>
-                    <img src="assets/images/panier.png">
-                </button>
-            </div>
-        </nav>
+                <div class="row">
+                    <input type="checkbox" id="hamburger">
+                    <label for="hamburger" class="hamburger">
+                        <span class="line"></span>
+                        <span class="line"></span>
+                        <span class="line"></span>
+                    </label>
+                </div>
 
-        <section>
-            <div>
-                <h1>Veggie Point.</h1>
+            </nav>
+
+            <div class="intro">
+                <h1>VEGGIE POINT.</h1>
                 <p>Our Mission (possible!)
                     There’s nothing cooler than saving the planet. Our mission is to inspire people to make better
                     choices by showing them the future can be both sustainable and delicious.</p>
-                <a href="#menu">
-                    <img class="arrow-down" src="assets/images/icon-arrow-down.svg" tag="flèche">
+                <a class="arrow-down" href="#menu">
+                    <img src="assets/images/icon-arrow-down.svg" tag="flèche">
                 </a>
             </div>
-        </section>
-=======
-
->>>>>>> damien
+        </div>
     </header>
 
     <main>
-        <div id="card-container"> 
-        </div>
+
     </main>
 
     <footer class="footer">
@@ -114,13 +99,8 @@
                 </ul>
             </div>
         </div>
-<<<<<<< HEAD
-      </footer>
-      <script src="script.js"></script> 
-=======
     </footer>
-
->>>>>>> 898fe5cf4c61195cd8275101133e846359189335
+    <script src="js/script.js"></script>
 </body>
 
 </html>
