--- a/index.html
+++ b/index.html
@@ -6,39 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
     <link rel="stylesheet" href="assets/scss/style.css">
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-=======
->>>>>>> 8346bca7208a00599e3cd6c0b3e2e8647f304a66
->>>>>>> ac65cd1357e5a08a387f2bf78e275683214ed1ac
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
 
     <header>
-<<<<<<< HEAD
+
         <div class="section-home">
             <nav class="navbar">
-                <a href="#">
-                    <img class="logo" src="assets/images/logo.png" tag="logo">
-                </a>
-
-=======
-<<<<<<< HEAD
-
-=======
->>>>>>> 8346bca7208a00599e3cd6c0b3e2e8647f304a66
-        <nav class="navbar">
-            <a href="#">
-                <img src="assets/images/logoClairSombre-removebg-preview.png" tag="logo">
-            </a>
-            <div>
->>>>>>> ac65cd1357e5a08a387f2bf78e275683214ed1ac
+                <img class="logo" src="assets/images/logo.png" tag="logo">
                 <ul class="nav_menu">
                     <li class="nav_text">
-                        <a href="#">Home</a>
+                        <a href="home">Home</a>
                     </li>
                     <li class="nav_text">
                         <a href="#about">About</a>
@@ -50,15 +33,14 @@
                         <input type="checkbox" id="darkmode-toggle">
                         <label for="darkmode-toggle"></label>
                     </li>
-                </ul>
-                <div class="row">
-                    <input type="checkbox" id="hamburger">
-                    <label for="hamburger" class="hamburger">
-                        <span class="line"></span>
-                        <span class="line"></span>
-                        <span class="line"></span>
-                    </label>
-                </div>
+                    <div class="row">
+                        <input type="checkbox" id="hamburger">
+                        <label for="hamburger" class="hamburger">
+                            <span class="line"></span>
+                            <span class="line"></span>
+                            <span class="line"></span>
+                        </label>
+                    </div>
 
             </nav>
 
@@ -67,30 +49,20 @@
                 <p>Our Mission (possible!)
                     There’s nothing cooler than saving the planet. Our mission is to inspire people to make better
                     choices by showing them the future can be both sustainable and delicious.</p>
-                <a class="arrow-down" href="#menu">
+                <div class="arrow-down">
                     <img src="assets/images/icon-arrow-down.svg" tag="flèche">
-                </a>
+                </div>
             </div>
-<<<<<<< HEAD
+
         </div>
     </header>
 
     <main>
-
-=======
-        </section>
-    </header>
-
-    <main>
-<<<<<<< HEAD
         <h2 class="h2main">Notre menu :</h2>
-        <div id="card-container"> 
-=======
         <div id="card-container">
->>>>>>> 8346bca7208a00599e3cd6c0b3e2e8647f304a66
-        </div>
-        <script src="assets/js/script.js"></script> 
->>>>>>> ac65cd1357e5a08a387f2bf78e275683214ed1ac
+            <div id="card-container">
+            </div>
+            <script src="assets/js/script.js"></script>
     </main>
 
     <footer class="footer">
@@ -117,44 +89,29 @@
                         alt="github"></a>
 
 
-            <div class="footer_container_icones">
-                <ul class="footer_container_icones_list">
-                    <li>
-                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-facebook.svg"
-                                alt="facebook"></a>
-                    </li>
-                    <li>
-                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-twitter.svg"
-                                alt="twitter"></a>
-                    </li>
-                    <li>
-                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-instagram.svg"
-                                alt="instagram"></a>
-                    </li>
-                    <li>
-                        <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-pinterest.svg"
-                                alt="pinterest"></a>
-                    </li>
-                </ul>
+                <div class="footer_container_icones">
+                    <ul class="footer_container_icones_list">
+                        <li>
+                            <a class="footer_container_icones_list_li" href=""><img
+                                    src="assets/images/icon-facebook.svg" alt="facebook"></a>
+                        </li>
+                        <li>
+                            <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-twitter.svg"
+                                    alt="twitter"></a>
+                        </li>
+                        <li>
+                            <a class="footer_container_icones_list_li" href=""><img
+                                    src="assets/images/icon-instagram.svg" alt="instagram"></a>
+                        </li>
+                        <li>
+                            <a class="footer_container_icones_list_li" href=""><img
+                                    src="assets/images/icon-pinterest.svg" alt="pinterest"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-<<<<<<< HEAD
-    </footer>
-    <script src="js/script.js"></script>
-=======
-<<<<<<< HEAD
-
-      
 
     </footer>
-  
-   
-=======
-    </footer>
-
-    <script src="script.js"></script>
->>>>>>> 8346bca7208a00599e3cd6c0b3e2e8647f304a66
->>>>>>> ac65cd1357e5a08a387f2bf78e275683214ed1ac
 </body>
 
 </html>
