modif day 2 damien

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
                         <button class="darkmode-button" id="darkmode-toggle">Darkmode</button>
                     </li>
                     <li>
-                        <img class="panier" src="assets/images/panier.png">
+                        <button class="custom-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1.4em" viewBox="0 0 576 512" fill="#1E1E1E" style="background-color: transparent;">
+                              <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path>
+                            </svg>
+                          </button>
+                          
+                          
                     </li>
                     <div class="row">
                         <input type="checkbox" id="hamburger">
@@ -72,11 +78,11 @@
     <footer class="footer">
         <div class="footer_container">
             <div class="footer_container_contact">
-                <p class="footer_contact"><strong>Veggie Point</strong><br><i>20 Rue de Flandre<br>Bruxelles 1000<br>Belgique<br>----------------<br>0485 98 78 50<br>veggiepoint@hotmail.com</i></p>
+                <p class="footer_contact" id="contact"><strong>Veggie Point</strong><br><i>20 Rue de Flandre<br>Bruxelles 1000<br>Belgique<br>----------------<br>0485 98 78 50<br>veggiepoint@hotmail.com</i></p>
                 <div class="footer_container_logo">
                     <img src="assets/images/logoclair2.png" alt="logo"></a>
                 </div>
-                <div class="footer_container_about">
+                <div class="footer_container_about" id="about">
                     <h2>Qui sommes nous ?</h2>
                     <p>Un restaurant végétarien dédié à la création de plats<br>délicieux et équilibrés,
                     mettant en valeur des ingrédients<br>frais pour offrir une expérience culinaire savoureuse et<br>
