--- a/index.html
+++ b/index.html
@@ -6,95 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dark kitchen</title>
     <link rel="stylesheet" href="assets/scss/style.css">
-<<<<<<< HEAD
-
     <link
         href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
         rel="stylesheet">
-=======
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
-        rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
->>>>>>> c33dff0aa6eb3f6150ceac48e1672d9b26b85001
 </head>
 
 <body>
     <header>
 
-        <div class="section-home">
+        <div class="section-home" id="section-home">
             <nav class="navbar">
-<<<<<<< HEAD
-                <a href="#">
-                    <img class="logo" src="assets/images/logo.png" tag="logo">
-                </a>
-
-
-                <nav class="navbar">
-                    <a href="#">
-                        <img src="assets/images/logoClairSombre-removebg-preview.png" tag="logo">
-                    </a>
-                    <div>
-                        <ul class="nav_menu">
-                            <li class="nav_text">
-                                <a href="#">Home</a>
-                            </li>
-                            <li class="nav_text">
-                                <a href="#about">About</a>
-                            </li>
-                            <li class="nav_text">
-                                <a href="#contact">Contact</a>
-                            </li>
-                            <li class="nav_text darkmode">
-                                <input type="checkbox" id="darkmode-toggle">
-                                <label for="darkmode-toggle"></label>
-                            </li>
-                        </ul>
-                        <div class="row">
-                            <input type="checkbox" id="hamburger">
-                            <label for="hamburger" class="hamburger">
-                                <span class="line"></span>
-                                <span class="line"></span>
-                                <span class="line"></span>
-                            </label>
-                        </div>
-
-                </nav>
-
-                <div class="intro">
-                    <h1>VEGGIE POINT.</h1>
-                    <p>Our Mission (possible!)
-                        There’s nothing cooler than saving the planet. Our mission is to inspire people to make better
-                        choices by showing them the future can be both sustainable and delicious.</p>
-                    <a class="arrow-down" href="#menu">
-                        <img src="assets/images/icon-arrow-down.svg" tag="flèche">
-                    </a>
-                </div>
-
-        </div>
-    </header>
-
-
-    <main>
-        <h2 class="h2main">Notre menu :</h2>
-        <div id="card-container">
-        </div>
-        <script src="assets/js/script.js"></script>
-=======
                 <img class="logo" src="assets/images/logo.png" tag="logo">
                 <ul class="nav_menu">
                     <li class="nav_text">
-                        <a href="home">Home</a>
+                        <a class="nav_button" href="#card-container">Menu</a>
                     </li>
                     <li class="nav_text">
-                        <a href="#about">About</a>
+                        <a class="nav_button" href="#about">About</a>
                     </li>
                     <li class="nav_text">
-                        <a href="#contact">Contact</a>
+                        <a class="nav_button" href="#contact">Contact</a>
                     </li>
                     <li class="nav_text darkmode">
-                        <input type="checkbox" id="darkmode-toggle">
-                        <label for="darkmode-toggle"></label>
+                        <button class="darkmode-button" id="darkmode-toggle">Darkmode</button>
+                    </li>
+                    <li>
+                        <img class="panier" src="assets/images/panier.png">
                     </li>
                     <div class="row">
                         <input type="checkbox" id="hamburger">
@@ -112,9 +53,9 @@
                 <p>Our Mission (possible!)
                     There’s nothing cooler than saving the planet. Our mission is to inspire people to make better
                     choices by showing them the future can be both sustainable and delicious.</p>
-                <div class="arrow-down">
+                <a class="arrow-down" href="#card-container">
                     <img src="assets/images/icon-arrow-down.svg" tag="flèche">
-                </div>
+                </a>
             </div>
 
         </div>
@@ -122,29 +63,25 @@
 
     <main>
         <h2 class="h2main">Notre menu :</h2>
+        <div id="filter-buttons"></div>
         <div id="card-container">
-            <div id="card-container">
             </div>
             <script src="assets/js/script.js"></script>
->>>>>>> c33dff0aa6eb3f6150ceac48e1672d9b26b85001
     </main>
 
     <footer class="footer">
         <div class="footer_container">
-            <h2>Où nous trouver</h2>
-            <div class="footer_container_about">
-                <p><strong>Veggie Point</strong><br>20 Rue de Flandre<br>Bruxelles 1000<br>Belgique</p>
+            <div class="footer_container_contact">
+                <p class="footer_contact"><strong>Veggie Point</strong><br><i>20 Rue de Flandre<br>Bruxelles 1000<br>Belgique<br>----------------<br>0485 98 78 50<br>veggiepoint@hotmail.com</i></p>
                 <div class="footer_container_logo">
-                    <img src="assets/images/logoClairSansFond.png" alt="logo"></a>
+                    <img src="assets/images/logoclair2.png" alt="logo"></a>
                 </div>
-                <div class="footer_container_liens">
-                    <ul class="footer_container_liens_list">
-                        <li><a href="">Nos offres</a></li>
-                        <li><a href="">Entreprise</a></li>
-                        <li><a href="">FAQ</a></li>
-                        <li><a href="">politique de confidentialité</a></li>
-                        <li><a href="">Contactez-nous</a></li>
-                    </ul>
+                <div class="footer_container_about">
+                    <h2>Qui sommes nous ?</h2>
+                    <p>Un restaurant végétarien dédié à la création de plats<br>délicieux et équilibrés,
+                    mettant en valeur des ingrédients<br>frais pour offrir une expérience culinaire savoureuse et<br>
+                    durable,tout en favorisant un mode de vie végétarien.
+                    </p>
                 </div>
 
             </div>
@@ -174,13 +111,10 @@
                     </ul>
                 </div>
             </div>
-
+        <div class="footer_politiqueConfi">
+                <a class="footer_politiqueConfi_P" href="">politique de confidentialité</a>
+            </div>
     </footer>
-<<<<<<< HEAD
-    <script src="js/script.js"></script>
-
-=======
->>>>>>> c33dff0aa6eb3f6150ceac48e1672d9b26b85001
 </body>
 
 </html>
