--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <script src="assets/js/script.js"></script> 
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div class="section-home">
+        <div class="section-home" id="section-home">
             <nav class="navbar">
                 <a href="#">
-                    <img class="logo" src="assets/images/logo.png" tag="logo">
+                    <img class="logo" src="assets/images/logo.png" alt="logo">
                 </a>
                 <ul class="nav_menu">
                     <li class="nav_text">
@@ -43,16 +42,15 @@
                             </svg>
                           </button>
                     </li>
-
-                    <div class="row">
-                        <input type="checkbox" id="hamburger">
-                        <label for="hamburger" class="hamburger">
-                            <span class="line"></span>
-                            <span class="line"></span>
-                            <span class="line"></span>
-                        </label>
-                    </div>
-
+                </ul>
+                <div class="row">
+                    <input type="checkbox" id="hamburger">
+                    <label for="hamburger" class="hamburger">
+                        <span class="line"></span>
+                        <span class="line"></span>
+                        <span class="line"></span>
+                    </label>
+                </div>
             </nav>
 
             <div class="intro">
@@ -123,7 +121,7 @@
                 <a class="footer_politiqueConfi_P" href="">Politique de confidentialité</a>
             </div>
     </footer>
-
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
