--- a/index.html
+++ b/index.html
@@ -36,13 +36,38 @@
                         <span class="slider round"></span>
                     </label>
                     <li>
-                        <button class="custom-button">
+                        <button class="shoppingcart">
                             <svg xmlns="http://www.w3.org/2000/svg" height="1.4em" viewBox="0 0 576 512" fill="#1E1E1E" style="background-color: transparent;">
                               <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path>
                             </svg>
                           </button>
                     </li>
                 </ul>
+
+                <div class="modal" id="cartModal">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h2>Shopping Cart</h2>
+                        <span id="closeModal" class="close-button">&times;</span>
+                      </div>  
+                      <table id="cartTable">
+                        <thead>
+                          <tr>
+                            <th>Product</th>
+                            <th>Price</th>
+                            <th>Quantity</th>
+                            <th>Total</th>
+                            <th>Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody id="cartItems"></tbody>
+                      </table>
+                      <p class="total_checkout">Total: <span id="cartTotal">€0.00</span></p>
+                      <button id="checkoutButton" onclick="orderComplete()">Order now</button>
+                      <button onclick="clearCart()" class="clear_btn">Clear cart</button>
+                    </div>
+                  </div> 
+
                 <div class="row">
                     <input type="checkbox" id="hamburger">
                     <label for="hamburger" class="hamburger">
@@ -52,6 +77,8 @@
                     </label>
                 </div>
             </nav>
+
+           
 
             <div class="intro">
                 <h1>VEGGIE POINT.</h1>
@@ -72,6 +99,7 @@
         <div id="card-container"> 
         </div>
             <script src="assets/js/script.js"></script>
+            <script src="assets/js/basket.js"></script>
     </main>
 
     <footer class="footer">
@@ -82,36 +110,37 @@
                     <img src="assets/images/logoclair2.png" alt="logo"></a>
                 </div>
                 <div class="footer_container_about" id="about">
-                    <h2>Qui sommes nous ?</h2>
-                    <p>Un restaurant végétarien dédié à la création de plats<br>délicieux et équilibrés,
-                        mettant en valeur des ingrédients<br>frais pour offrir une expérience culinaire savoureuse
-                        et<br>
-                        durable,tout en favorisant un mode de vie végétarien.
+                    <h2>Who are we ?</h2>
+                    <p>A vegetarian restaurant dedicated to<br>
+                        creating dishes delicious and balanced,<br>
+                        highlighting ingredients fresh to provide<br>
+                        a tasty and delicious culinary experience<br>
+                        sustainable, while promoting a vegetarian lifestyle.
                     </p>
                 </div>
 
             </div>
-            <div class="footer_container_github">
+            <div class="footer_container_icones">
                 <a href="https://github.com/Dams4953/dark_kitchen/tree/main"><img src="assets/images/githubLogo.png"
                         alt="github"></a>
 
 
-                <div class="footer_container_icones">
-                    <ul class="footer_container_icones_list">
+                <div class="footer_container_icones_reseaux">
+                    <ul class="footer_container_icones_reseaux_list">
                         <li>
-                            <a class="footer_container_icones_list_li" href=""><img
+                            <a class="footer_container_icones_reseaux_list_li" href=""><img
                                     src="assets/images/icon-facebook.svg" alt="facebook"></a>
                         </li>
                         <li>
-                            <a class="footer_container_icones_list_li" href=""><img src="assets/images/icon-twitter.svg"
+                            <a class="footer_container_icones_reseaux_list_li" href=""><img src="assets/images/icon-twitter.svg"
                                     alt="twitter"></a>
                         </li>
                         <li>
-                            <a class="footer_container_icones_list_li" href=""><img
+                            <a class="footer_container_icones_reseaux_list_li" href=""><img
                                     src="assets/images/icon-instagram.svg" alt="instagram"></a>
                         </li>
                         <li>
-                            <a class="footer_container_icones_list_li" href=""><img
+                            <a class="footer_container_icones_reseaux_list_li" href=""><img
                                     src="assets/images/icon-pinterest.svg" alt="pinterest"></a>
                         </li>
                     </ul>
@@ -121,7 +150,6 @@
                 <a class="footer_politiqueConfi_P" href="">Politique de confidentialité</a>
             </div>
     </footer>
-    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
